--- a/style.css
+++ b/style.css
@@ -81,3 +81,33 @@ table {
     bottom: 10px;
 }
 
+.start{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 2rem 0;
+    text-align: center;
+    z-index: 200;
+    color: white;
+    font-size: 1.5rem;
+    background: black;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+}
+
+.score{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: black;
+    padding: 2rem 0;
+    z-index: 200;
+    font-size: 1.5rem;
+    color: blanchedalmond;
+    font-family: sans-serif;
+    font-weight: 500;
+}
